--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api project(':lib_repository')
+    api project(':lib_widget')
     api project(':lib_font')
     api 'androidx.core:core-ktx:1.5.0-alpha05'
 
