--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -15,12 +15,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-
-        kapt {
-            arguments {
-                arg("AROUTER_MODULE_NAME", project.getName())
-            }
-        }
     }
 
     buildTypes {
@@ -38,6 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
     implementation 'androidx.core:core-ktx:1.5.0-alpha05'
 
-    kapt 'com.alibaba:arouter-compiler:1.2.2'
-    
+    compileOnly project(':lib_font')
+    //BlankJ  https://github.com/Blankj/AndroidUtilCode
+    compileOnly 'com.blankj:utilcodex:1.30.4'
 }
