--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,17 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion android_config["compileSdkVersion"]
+    buildToolsVersion android_config["buildToolsVersion"]
 
     defaultConfig {
-        applicationId "com.capgemini.com"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        applicationId android_config["applicationId"]
+        minSdkVersion android_config["minSdkVersion"]
+        targetSdkVersion android_config["targetSdkVersion"]
+        versionCode android_config["versionCode"]
+        versionName android_config["versionName"]
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
-
 
         kapt {
             arguments {
@@ -48,17 +47,15 @@ android {
 
 dependencies {
     implementation project(path: ':lib_base')
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    kapt 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
-    implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
-    kapt 'com.alibaba:arouter-compiler:1.2.2'
+    implementation android_dependencies["constraintlayout"]
+    implementation android_dependencies["hilt-lifecycle-viewmodel"]
+    implementation android_dependencies["hilt-android"]
+    kapt android_dependencies["hilt-android-compiler"]
+    kapt android_dependencies["hilt-compiler"]
+    implementation android_dependencies["appcompat"]
+    implementation android_dependencies["recyclerview"]
+    implementation android_dependencies["multidex"]
 
+    kapt third_libs["arouter-compiler"]
     implementation project(path: ':module_profile')
-    implementation 'com.android.support:multidex:1.0.3'
-
-
 }
