--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -5,14 +5,14 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion android_config["compileSdkVersion"]
+    buildToolsVersion android_config["buildToolsVersion"]
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion android_config["minSdkVersion"]
+        targetSdkVersion android_config["targetSdkVersion"]
+        versionCode android_config["versionCode"]
+        versionName android_config["versionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -39,8 +39,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation android_dependencies["hilt-android"]
+    kapt android_dependencies["hilt-android-compiler"]
+    kapt third_libs["arouter-compiler"]
     api project(path: ':lib_common')
-    kapt 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
-    implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
-    kapt 'com.alibaba:arouter-compiler:1.2.2'
 }
