--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':lib_widget'
 include ':module_sample'
 include ':module_profile'
 include ':lib_network_config'
-include ':lib_base'
+include ':lib_communication'
 include ':lib_common'
 include ':lib_repository'
 include ':app'
