--- a/module_sample/build.gradle
+++ b/module_sample/build.gradle
@@ -33,11 +33,15 @@ android {
 }
 
 dependencies {
+    api project(path: ':lib_communication')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //hilt
     kapt 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
     implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
+    implementation android_dependencies["hilt-lifecycle-viewmodel"]
+
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
     implementation 'androidx.core:core-ktx:1.5.0-alpha05'
     kapt 'com.alibaba:arouter-compiler:1.2.2'
