--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="design_height_in_dp"
             android:value="667"/>
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.ModuleEntranceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
