--- a/lib_repository/build.gradle
+++ b/lib_repository/build.gradle
@@ -27,13 +27,8 @@ android {
 }
 
 dependencies {
-     // retrofit https://github.com/square/retrofit
-    def retrofit = "2.9.0"
-    api "com.squareup.retrofit2:retrofit:$retrofit"
-    api "com.squareup.retrofit2:converter-gson:$retrofit"
     kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
     implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
-
 
     // room
     def roomVersion = "2.2.5"
@@ -42,4 +37,23 @@ dependencies {
     api "androidx.room:room-ktx:$roomVersion"
 
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+
+    //OKHttp
+    api "com.squareup.okhttp3:okhttp:4.3.1"
+    api "com.squareup.okhttp3:logging-interceptor:4.3.1"
+
+
+    //Retrofit retrofit https://github.com/square/retrofit
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+
+
+    //chuck-okhttp debug 模式下的拦截器
+    debugApi 'com.readystatesoftware.chuck:library:1.1.0'
+    releaseApi 'com.readystatesoftware.chuck:library-no-op:1.1.0'
+
+    //BlankJ  https://github.com/Blankj/AndroidUtilCode
+    compileOnly 'com.blankj:utilcodex:1.30.4'
 }
