--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -17,6 +17,12 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,13 +32,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.aar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
     implementation 'androidx.core:core-ktx:1.5.0-alpha05'
 
-    compileOnly project(':lib_font')
     //BlankJ  https://github.com/Blankj/AndroidUtilCode
     compileOnly 'com.blankj:utilcodex:1.30.4'
 }
