--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.aar"])
+    api fileTree(dir: "libs", include: ["*.aar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
