--- a/settings.gradle
+++ b/settings.gradle
@@ -2,9 +2,10 @@ include ':module_home'
 include ':lib_widget'
 include ':module_sample'
 include ':module_profile'
-include ':lib_network_config'
 include ':lib_communication'
 include ':lib_common'
 include ':lib_repository'
 include ':app'
+//include ':lib_network_config'
+//include ':lib_font'
 rootProject.name = "Smart_Android_App"
