--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -32,7 +32,8 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: "libs", include: ["*.aar"])
+    api(name: 'lib_font', ext: 'aar')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
