--- a/module_profile/build.gradle
+++ b/module_profile/build.gradle
@@ -6,45 +6,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion android_config["compileSdkVersion"]
-    buildToolsVersion android_config["buildToolsVersion"]
-
-    defaultConfig {
-        minSdkVersion android_config["minSdkVersion"]
-        targetSdkVersion android_config["targetSdkVersion"]
-        versionCode android_config["versionCode"]
-        versionName android_config["versionName"]
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-
-        kapt {
-            arguments {
-                arg("AROUTER_MODULE_NAME", project.getName())
-            }
-        }
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    buildFeatures {
-        dataBinding = true
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
-    }
-
+    resourcePrefix "profile"
 }
 
 dependencies {
