--- a/config.gradle
+++ b/config.gradle
@@ -51,23 +51,23 @@ afterEvaluate {
                 dimension 'environment'
             }
 
-            qa {
-                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
-                dimension 'environment'
-            }
-
-            stage {
-                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
-                dimension 'environment'
-            }
-
-            product {
-                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
-                dimension 'environment'
-            }
+//            qa {
+//                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
+//                dimension 'environment'
+//            }
+//
+//            stage {
+//                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
+//                dimension 'environment'
+//            }
+//
+//            product {
+//                buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
+//                dimension 'environment'
+//            }
         }
     }
-    
+
     repositories {
         flatDir {
             dirs = rootProject.subprojects.collect { project -> "${project.projectDir}/libs" } + "$projectDir/libs"
