--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api project(':lib_repository')
     api project(':lib_widget')
+    api(name: 'lib_font', ext: 'aar')
     api 'androidx.core:core-ktx:1.5.0-alpha05'
 
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
@@ -59,6 +60,10 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    api 'androidx.work:work-runtime-ktx:2.4.0'
+    api 'androidx.work:work-runtime:2.4.0'
+
+
     // gpuimage https://github.com/cats-oss/android-gpuimage
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
 
@@ -69,9 +74,9 @@ dependencies {
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
 
-    //fragment adn navigation ktx
-    api "androidx.navigation:navigation-fragment-ktx:2.3.1"
-    api "androidx.navigation:navigation-ui-ktx:2.3.1"
+    //fragment and navigation ktx
+    api "androidx.navigation:navigation-fragment-ktx:2.3.2"
+    api "androidx.navigation:navigation-ui-ktx:2.3.2"
 
     //coroutines
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
@@ -94,7 +99,7 @@ dependencies {
 
     //material design
 
-    api 'com.google.android.material:material:1.3.0-alpha03'
+    api 'com.google.android.material:material:1.3.0-alpha04'
     api 'androidx.appcompat:appcompat:1.3.0-alpha02'
 
     api "androidx.startup:startup-runtime:1.0.0"
@@ -111,4 +116,6 @@ dependencies {
 
     /*屏幕适配方案 以及常见问题解决办法：https://github.com/JessYanCoding/AndroidAutoSize/issues/13*/
     api 'me.jessyan:autosize:1.2.1'
+    //https://github.com/LiangLuDev/DevShapeUtils
+    api 'cn.luliangdev:DevShapeUtils:1.1.0'
 }
