--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <activity android:name=".activity.SimpleLoginActivity"/>
         <activity android:name=".activity.SampleFragmentActivity"/>
         <activity android:name=".activity.SimpleListActivity"/>
+        <activity android:name=".activity.SimpleCommunityHomeActivity"/>
     </application>
 
 
