--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         <activity android:name=".activity.SampleFragmentActivity"/>
         <activity android:name=".activity.SimpleListActivity"/>
         <activity android:name=".activity.SimpleCommunityHomeActivity"/>
+        <activity android:name=".activity.SimpleScrollActivity"/>
     </application>
 
 
