add http request demo

--- a/config.gradle
+++ b/config.gradle
@@ -49,6 +49,7 @@ afterEvaluate {
             dev {
                 buildConfigField("String", "BASE_URL", "\"http://www.baidu.com\"")
                 buildConfigField("String", "COMMUNITY_URL", "\"http://123.56.232.18:8080/serverdemo/\"")
+                buildConfigField("String", "GITHUB_URL", "\"https://api.github.com/\"")
                 dimension 'environment'
             }
 
