--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.hilt = "2.28-alpha"
     repositories {
         google()
-        jcenter()
+        jcenter{url "http://jcenter.bintray.com/"}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
