--- a/lib_repository/build.gradle
+++ b/lib_repository/build.gradle
@@ -27,6 +27,8 @@ android {
 }
 
 dependencies {
+
+    androidTestImplementation 'junit:junit:4.12'
     kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
     implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
 
