--- a/lib_repository/build.gradle
+++ b/lib_repository/build.gradle
@@ -24,6 +24,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -58,4 +61,7 @@ dependencies {
 
     //BlankJ  https://github.com/Blankj/AndroidUtilCode
     compileOnly 'com.blankj:utilcodex:1.30.4'
+
+    //@Parcelize
+    apply plugin: 'kotlin-android-extensions'
 }
