--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         <activity android:name=".activity.SimpleListActivity"/>
         <activity android:name=".activity.SimpleCommunityHomeActivity"/>
         <activity android:name=".activity.SimpleScrollActivity"/>
-        <activity android:name=".activity.Hilt_SampleUserListActivity"/>
+        <activity android:name=".activity.SampleUserListActivity"/>
     </application>
 
 
