--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         <activity android:name=".activity.SimpleListActivity" />
         <activity android:name=".activity.SimpleCommunityHomeActivity" />
         <activity android:name=".activity.SimpleScrollActivity" />
+        <activity android:name=".activity.SimpleReposActivity" />
     </application>
 
 </manifest>
