update some code

--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.capgemini.module_sample">
 
     <application>
-        <activity android:name=".activity.SimpleGitHubLoginActivity"/>
-        <activity android:name=".activity.SimpleReposDetailsActivity"/>
-        <activity android:name=".activity.SimpleMainActivity" >
+        <activity android:name=".activity.SimpleGitHubLoginActivity">
             <intent-filter>
                 <data
                     android:scheme="smart"
@@ -16,6 +14,10 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.SimpleReposDetailsActivity"/>
+        <activity android:name=".activity.SimpleMainActivity" >
+
         </activity>
         <activity android:name=".activity.SimpleLoginActivity" />
         <activity android:name=".activity.SampleFragmentActivity" />
